# CxDojoTest

./: .gitignore  Dockerfile  README.md  pyproject.toml
backend_main/: asgi.py  settings.py  urls.py  wsgi.py
csvs/: admin.py  models.py  views.py
csvs/migrations/: 0001_initial.py
static/css/: login.css  signup.css
static/js/: login.js
templates/: base.html  data.html  home.html  login.html  profile.html  signup.html
user/: admin.py  models.py  views.py
user/migrations/: 0001_initial.py  0002_alter_user_username.py  0003_user_avatar.py  0004_alter_user_avatar.py
