[tool.poetry]
name = "cxdojo-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "cxdojo_app"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.3"
Pillow = "^9.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
